; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/rio/extr_rio_linux.c_get_VPD_PROM.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/rio/extr_rio_linux.c_get_VPD_PROM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vpd_prom = type { i32 }
%struct.Host = type { i64 }

@get_VPD_PROM.vpdp = internal global %struct.vpd_prom zeroinitializer, align 4
@RIO_DEBUG_PROBE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Going to verify vpd prom at %p.\0A\00", align 1
@RIO_VPD_ROM = common dso_local global i64 0, align 8
@rio_debug = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.vpd_prom* (%struct.Host*)* @get_VPD_PROM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.vpd_prom* @get_VPD_PROM(%struct.Host* %0) #0 {
  %2 = alloca %struct.Host*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store %struct.Host* %0, %struct.Host** %2, align 8
  %5 = call i32 (...) @func_enter()
  %6 = load i32, i32* @RIO_DEBUG_PROBE, align 4
  %7 = load %struct.Host*, %struct.Host** %2, align 8
  %8 = getelementptr inbounds %struct.Host, %struct.Host* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @RIO_VPD_ROM, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @rio_dprintk(i32 %6, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i64 %11)
  store i8* bitcast (%struct.vpd_prom* @get_VPD_PROM.vpdp to i8*), i8** %3, align 8
  store i32 0, i32* %4, align 4
  br label %13

13:                                               ; preds = %31, %1
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = icmp ult i64 %15, 4
  br i1 %16, label %17, label %34

17:                                               ; preds = %13
  %18 = load %struct.Host*, %struct.Host** %2, align 8
  %19 = getelementptr inbounds %struct.Host, %struct.Host* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @RIO_VPD_ROM, align 8
  %22 = add nsw i64 %20, %21
  %23 = load i32, i32* %4, align 4
  %24 = mul nsw i32 %23, 2
  %25 = sext i32 %24 to i64
  %26 = add nsw i64 %22, %25
  %27 = call i32 @readb(i64 %26)
  %28 = trunc i32 %27 to i8
  %29 = load i8*, i8** %3, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %3, align 8
  store i8 %28, i8* %29, align 1
  br label %31

31:                                               ; preds = %17
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %4, align 4
  br label %13

34:                                               ; preds = %13
  %35 = load i8*, i8** %3, align 8
  %36 = getelementptr inbounds i8, i8* %35, i32 1
  store i8* %36, i8** %3, align 8
  store i8 0, i8* %35, align 1
  %37 = load i32, i32* @rio_debug, align 4
  %38 = load i32, i32* @RIO_DEBUG_PROBE, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %34
  %42 = call i32 @my_hd(i8* bitcast (%struct.vpd_prom* @get_VPD_PROM.vpdp to i8*), i32 32)
  br label %43

43:                                               ; preds = %41, %34
  %44 = call i32 (...) @func_exit()
  ret %struct.vpd_prom* @get_VPD_PROM.vpdp
}

declare dso_local i32 @func_enter(...) #1

declare dso_local i32 @rio_dprintk(i32, i8*, i64) #1

declare dso_local i32 @readb(i64) #1

declare dso_local i32 @my_hd(i8*, i32) #1

declare dso_local i32 @func_exit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
